[gd_scene load_steps=17 format=2]

[ext_resource path="res://Scripts/newmain.gd" type="Script" id=1]
[ext_resource path="res://Images/fullscreen.png" type="Texture" id=2]
[ext_resource path="res://Misc/Mustamägi.ogv" type="VideoStream" id=3]
[ext_resource path="res://Scripts/fullscreen.gd" type="Script" id=4]
[ext_resource path="res://Fonts/ComicSans.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Misc/Music/mustamägi.mp3" type="AudioStream" id=6]
[ext_resource path="res://Images/sad.png" type="Texture" id=7]
[ext_resource path="res://Images/hap.png" type="Texture" id=8]
[ext_resource path="res://Scenes/settings.tscn" type="PackedScene" id=9]

[sub_resource type="DynamicFont" id=8]
size = 55
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=9]
size = 75
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=1]
size = 100
outline_size = 4
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=4]
size = 50
outline_size = 3
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=5]
size = 98
outline_size = 3
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=6]
size = 61
outline_size = 1
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=7]
size = 44
font_data = ExtResource( 5 )

[node name="Main" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="VideoPlayer" type="VideoPlayer" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
stream = ExtResource( 3 )
autoplay = true

[node name="fullscreen" type="Button" parent="VideoPlayer"]
visible = false
margin_left = -3.0
margin_top = 874.0
margin_right = 417.0
margin_bottom = 1294.0
rect_scale = Vector2( 0.5, 0.5 )
icon = ExtResource( 2 )
flat = true
script = ExtResource( 4 )

[node name="HTMLpopup" type="Popup" parent="VideoPlayer"]
visible = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -574.0
margin_top = -289.0
margin_right = 576.0
margin_bottom = 311.0

[node name="bg" type="ColorRect" parent="VideoPlayer/HTMLpopup"]
margin_right = 1150.0
margin_bottom = 600.0
color = Color( 0, 0, 0, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="VideoPlayer/HTMLpopup/bg"]
margin_right = 1150.0
margin_bottom = 600.0
custom_constants/separation = 31

[node name="HTML" type="RichTextLabel" parent="VideoPlayer/HTMLpopup/bg/VBoxContainer"]
margin_right = 1150.0
margin_bottom = 195.0
custom_fonts/normal_font = SubResource( 8 )
bbcode_enabled = true
bbcode_text = "
[center]We recommend switching to Fullscreen
(this can also be changed in the settings)[/center]"
text = "
We recommend switching to Fullscreen
(this can also be changed in the settings)"
fit_content_height = true

[node name="Confirm" type="Button" parent="VideoPlayer/HTMLpopup/bg/VBoxContainer"]
margin_top = 226.0
margin_right = 1150.0
margin_bottom = 319.0
focus_mode = 0
custom_fonts/font = SubResource( 9 )
enabled_focus_mode = 0
text = "Confirm"
flat = true

[node name="Nah" type="Button" parent="VideoPlayer/HTMLpopup/bg/VBoxContainer"]
margin_top = 350.0
margin_right = 1150.0
margin_bottom = 443.0
focus_mode = 0
custom_fonts/font = SubResource( 9 )
enabled_focus_mode = 0
text = "No, i think i know better than you"
flat = true
__meta__ = {
"_editor_description_": ""
}

[node name="title" type="Control" parent="."]
margin_right = 1878.0
margin_bottom = 316.0

[node name="Title" type="RichTextLabel" parent="title"]
margin_left = 28.0
margin_top = 38.0
margin_right = 1874.0
margin_bottom = 571.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 1 )
text = " MUSTAMAE SEIKLUSED"

[node name="ä" type="RichTextLabel" parent="title"]
margin_left = 422.0
margin_top = -9.0
margin_right = 537.0
margin_bottom = 110.0
rect_scale = Vector2( 1.51363, 1 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 4 )
text = "  . ."
fit_content_height = true

[node name="start" type="Button" parent="."]
margin_left = 100.0
margin_top = 200.0
margin_right = 388.0
margin_bottom = 319.0
rect_pivot_offset = Vector2( 123, 80 )
focus_mode = 0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 5 )
enabled_focus_mode = 0
text = "Start"
flat = true
align = 0

[node name="settings" type="Button" parent="."]
margin_left = 100.0
margin_top = 350.0
margin_right = 388.0
margin_bottom = 469.0
rect_pivot_offset = Vector2( 123, 80 )
focus_mode = 0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 5 )
enabled_focus_mode = 0
text = "Settings"
flat = true
align = 0

[node name="quit" type="Button" parent="."]
margin_left = 100.0
margin_top = 500.0
margin_right = 388.0
margin_bottom = 619.0
rect_pivot_offset = Vector2( 123, 80 )
focus_mode = 0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 5 )
enabled_focus_mode = 0
text = "Quit"
flat = true
align = 0

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
bus = "Music"

[node name="CheckButton" type="CheckButton" parent="AudioStreamPlayer"]
margin_left = 1699.0
margin_top = 839.0
margin_right = 1922.0
margin_bottom = 960.0
focus_mode = 0
custom_fonts/font = SubResource( 6 )
custom_icons/off = ExtResource( 7 )
custom_icons/on = ExtResource( 8 )
enabled_focus_mode = 0
text = "Music"
flat = true
align = 1

[node name="Version" type="RichTextLabel" parent="."]
margin_left = 1576.0
margin_top = 1029.0
margin_right = 2135.0
margin_bottom = 1084.0
custom_fonts/normal_font = SubResource( 7 )
bbcode_enabled = true
bbcode_text = "version Alpha 0.02"
text = "version Alpha 0.02"

[node name="Button" type="Button" parent="Version"]
margin_left = -14.0
margin_top = -26.0
margin_right = 344.0
margin_bottom = 81.0
flat = true

[node name="SettingsMenu" parent="." instance=ExtResource( 9 )]

[connection signal="finished" from="VideoPlayer" to="." method="_on_VideoPlayer_finished"]
[connection signal="toggled" from="VideoPlayer/fullscreen" to="VideoPlayer/fullscreen" method="_on_fullscreen_toggled"]
[connection signal="pressed" from="VideoPlayer/HTMLpopup/bg/VBoxContainer/Confirm" to="." method="_on_Confirm_pressed"]
[connection signal="pressed" from="VideoPlayer/HTMLpopup/bg/VBoxContainer/Nah" to="." method="_on_Nah_pressed"]
[connection signal="pressed" from="start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="quit" to="." method="_on_quit_pressed"]
[connection signal="toggled" from="AudioStreamPlayer/CheckButton" to="." method="_on_CheckButton_toggled"]
[connection signal="meta_clicked" from="Version" to="." method="_on_Version_meta_clicked"]
[connection signal="pressed" from="Version/Button" to="." method="_on_Button_pressed"]
